@@ -1,3 +1,8 @@
+2002-08-14  Jonathan Wakely  <jw@kayari.org>
+
+	* docs/html/22_locale/messages.html:  Use HTML entities for
+	punctuation.
+
 2002-08-13  Jonathan Wakely  <jw@kayari.org>
             Phil Edwards  <pme@gcc.gnu.org>
 
